--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 <div class="container">
 
   <!-- LEFT COLUMN -->
-  <aside class="card profile" aria-label="Informations personnelles">
+  <aside class="IDPHOTO.JPEG" aria-label="Informations personnelles">
     <div class="photo" aria-hidden="true">MAGUETTE DIOP</div>
 
     <div class="contact">
