--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 <div class="container">
 
   <!-- LEFT COLUMN -->
-  <aside class="IDPHOTO.JPEG" aria-label="Informations personnelles">
-    <div class="IDPHOTO.JPEG" aria-hidden="true">MAGUETTE DIOP</div>
+  <aside class="card profile" aria-label="Informations personnelles">
+    <div class="photo" aria-hidden="true">MAGUETTE DIOP</div>
 
     <div class="contact">
       <h2>Information — Documentation</h2>
