--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
   <!-- LEFT COLUMN -->
   <aside class="card profile" aria-label="Informations personnelles">
-    <div class="photo" aria-hidden="true">MAGUETTE DIOP</div>
+    <div class="photo" ><image source="IDPHOTO.JPEG">  </div>
 
     <div class="contact">
       <h2>Information — Documentation</h2>
