--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <!-- LEFT COLUMN -->
   <aside class="card profile" aria-label="Informations personnelles">
     <div class="photo" ><img src="designinfo25
-/IDPHOTO.JPEG">  </div>
+/PHOTOMA.JPEG">  </div>
 
     <div class="contact">
       <h2>Information — Documentation</h2>
