--- a/index.html
+++ b/index.html
@@ -126,8 +126,7 @@
 
   <!-- LEFT COLUMN -->
   <aside class="card profile" aria-label="Informations personnelles">
-    <div class="photo" ><img src="designinfo25
-/PHOTOMA.JPEG"></div>
+    <div class="photo" ><img src="designinfo25/PHOTOMA.JPEG"></div>
 
     <div class="contact">
       <h2>Information — Documentation</h2>
