--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 <div class="container">
 
   <!-- LEFT COLUMN -->
-  <aside class="card profile" aria-label="Informations personnelles">
-    <div class="photo" ><img src="designinfo25/PHOTOMA.JPEG"></div>
+  <aside class="designinfo25/PHOTOMA.JPEG" aria-label="Informations personnelles">
+    <div class="photo" > <img src="designinfo25/PHOTOMA.JPEG"> </div>
 
     <div class="contact">
       <h2>Information — Documentation</h2>
