--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Maguette Diop — Portfolio</title>
 <meta name="description" content="Maguette Diop — Master Gestion Stratégique de l'Information. Alternance en gestion documentaire, archives et innovation numérique." />
 <style>
-  :root{
+  :root {
     --bg:#f6f7fb;
     --card:#ffffff;
     --muted:#6b7280;
@@ -14,109 +14,126 @@
     --accent-2:#0b6ea8;
     --glass: rgba(15,76,129,0.06);
     --radius:12px;
-    font-family: "Inter", "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    font-family:"Inter","Segoe UI",Roboto,Helvetica,Arial,sans-serif;
   }
-  *{box-sizing:border-box}
-  body{
-    margin:0;
+  *{box-sizing:border-box;margin:0;padding:0}
+  body {
     background:linear-gradient(180deg,var(--bg),#ffffff 60%);
     color:#0b1720;
-    -webkit-font-smoothing:antialiased;
-    -moz-osx-font-smoothing:grayscale;
-    padding:28px;
-    line-height:1.45;
+    padding:20px;
+    line-height:1.6;
   }
 
-  .container{
+  .container {
     max-width:1100px;
     margin:0 auto;
     display:grid;
-    grid-template-columns: 320px 1fr;
+    grid-template-columns:320px 1fr;
     gap:24px;
   }
 
-  /* Card style */
-  .card{
+  .card {
     background:var(--card);
     border-radius:var(--radius);
     padding:22px;
-    box-shadow: 0 6px 18px rgba(12,35,62,0.06);
+    box-shadow:0 6px 18px rgba(12,35,62,0.06);
+    transition:transform 0.2s ease, box-shadow 0.2s ease;
+  }
+  .card:hover {
+    transform:translateY(-4px);
+    box-shadow:0 10px 20px rgba(0,0,0,0.08);
   }
 
-  /* Left column */
+  /* Colonne gauche */
   .profile {
     display:flex;
     flex-direction:column;
     gap:16px;
-    align-items:stretch;
   }
-  .photo{
+  .photo img {
     width:100%;
-    height:260px;
-    border-radius:12px;
-    background:linear-gradient(180deg,var(--glass), rgba(11,110,168,0.06));
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    color:var(--accent);
-    font-weight:700;
-    font-size:28px;
+    height:auto;
+    border-radius:var(--radius);
+    object-fit:cover;
   }
-  .contact h2{
-    margin:0 0 6px 0;
+  .contact h2 {
     font-size:20px;
     color:var(--accent);
+    margin-bottom:6px;
   }
-  .contact p{margin:4px 0;color:var(--muted);font-size:14px}
-  .tag{
+  .contact p {
+    margin:4px 0;
+    color:var(--muted);
+    font-size:14px;
+  }
+  .tag {
     display:inline-block;
     background:rgba(11,110,168,0.08);
     color:var(--accent-2);
-    padding:6px 10px;
+    padding:6px 12px;
     border-radius:999px;
     font-weight:600;
     font-size:13px;
-    margin-right:8px;
-    margin-top:8px;
+    margin:6px 6px 0 0;
   }
 
-  /* Right column */
-  header.main-header{
+  /* Colonne droite */
+  header.main-header {
     display:flex;
     justify-content:space-between;
-    align-items:flex-start;
+    flex-wrap:wrap;
     gap:12px;
   }
-  header .name{
-    margin:0;
-  }
-  .name h1{
-    font-size:26px;
-    margin:0 0 6px 0;
+  .name h1 {
+    font-size:28px;
     color:var(--accent);
+    margin-bottom:4px;
   }
-  .name p{margin:0;color:var(--muted);font-weight:600}
-  .summary{margin-top:12px;padding:14px;border-radius:10px;background:linear-gradient(90deg, rgba(15,76,129,0.03), rgba(11,110,168,0.02));color:#0b1720}
-  .section-title{
+  .name p {
+    color:var(--muted);
+    font-weight:600;
+  }
+  .summary {
+    margin-top:12px;
+    padding:16px;
+    border-radius:10px;
+    background:linear-gradient(90deg, rgba(15,76,129,0.03), rgba(11,110,168,0.02));
+  }
+  .section-title {
+    border-left:4px solid var(--accent);
+    padding-left:8px;
+    margin:20px 0 10px 0;
+  }
+  .section-title h3 {color:var(--accent);margin:0}
+  .item {margin-bottom:16px}
+  .meta {font-size:13px;color:var(--muted)}
+  .edu .school {font-weight:700}
+
+  .skills {
     display:flex;
-    align-items:center;
+    flex-wrap:wrap;
     gap:8px;
-    margin-bottom:12px;
     margin-top:8px;
   }
-  .section-title h3{margin:0;color:var(--accent)}
-  .list {margin:0;padding:0;list-style:none}
-  .item{margin-bottom:14px}
-  .meta{font-size:13px;color:var(--muted)}
-  .edu .school{font-weight:700;color:#0b1720}
-  .skills{display:flex;flex-wrap:wrap;gap:8px}
-  .skill {background:#eef6fb;border-radius:10px;padding:6px 10px;font-weight:600;color:var(--accent-2);font-size:13px}
-  footer.note{margin-top:20px;color:var(--muted);font-size:13px}
+  .skill {
+    background:#eef6fb;
+    border-radius:10px;
+    padding:6px 10px;
+    font-weight:600;
+    color:var(--accent-2);
+    font-size:13px;
+  }
+  footer.note {
+    margin-top:20px;
+    color:var(--muted);
+    font-size:13px;
+    text-align:center;
+  }
 
   /* Responsive */
-  @media (max-width:880px){
-    .container{grid-template-columns:1fr; padding:12px}
-    .photo{height:180px}
+  @media (max-width:880px) {
+    .container {grid-template-columns:1fr}
+    header.main-header {flex-direction:column;align-items:flex-start}
   }
 </style>
 </head>
@@ -124,25 +141,27 @@
 
 <div class="container">
 
-  <!-- LEFT COLUMN -->
-  <aside class="designinfo25/PHOTOMA.JPEG" aria-label="Informations personnelles">
-    <div class="photo" > <img src="designinfo25/PHOTOMA.JPEG"> </div>
+  <!-- Colonne gauche -->
+  <aside class="profile" aria-label="Informations personnelles">
+    <div class="photo">
+      <img src="designinfo25/PHOTOMA.JPEG" alt="Photo de Maguette Diop">
+    </div>
 
-    <div class="contact">
+    <div class="contact card">
       <h2>Information — Documentation</h2>
       <p><strong>Email :</strong> <a href="mailto:maguetta09@gmail.com">maguetta09@gmail.com</a></p>
       <p><strong>Tél :</strong> <a href="tel:+33753045524">07 53 04 55 24</a></p>
       <p><strong>Adresse :</strong> 5 rue Saint-Gobain, 93300 Aubervilliers</p>
-      <p class="meta">Ile-de-France, Paris</p>
-      <div style="margin-top:8px">
+      <p class="meta">Île-de-France, Paris</p>
+      <div>
         <span class="tag">Master GSI — Paris 8</span>
         <span class="tag">Recherche d'alternance</span>
       </div>
     </div>
 
-    <div class="card" style="padding:14px;box-shadow:none">
-      <h4 style="margin:0 0 8px 0;color:var(--accent)">Compétences</h4>
-      <div class="skills" aria-hidden="false">
+    <div class="card">
+      <h4 style="color:var(--accent);margin-bottom:8px">Compétences</h4>
+      <div class="skills">
         <span class="skill">Gestion documentaire</span>
         <span class="skill">Archivistique</span>
         <span class="skill">Koha / SUDOC</span>
@@ -152,76 +171,83 @@
       </div>
     </div>
 
-    <div class="card" style="padding:14px;box-shadow:none">
-      <h4 style="margin:0 0 8px 0;color:var(--accent)">Langues & Soft</h4>
+    <div class="card">
+      <h4 style="color:var(--accent);margin-bottom:8px">Langues & Soft skills</h4>
       <p class="meta"><strong>Langues :</strong> Français (natif), Wolof, Anglais</p>
       <p class="meta"><strong>Savoir-être :</strong> Sociable, Curieuse, Travail en équipe, Flexible</p>
     </div>
 
-    <div class="card" style="padding:14px;box-shadow:none">
-      <h4 style="margin:0 0 8px 0;color:var(--accent)">Centres d'intérêt</h4>
+    <div class="card">
+      <h4 style="color:var(--accent);margin-bottom:8px">Centres d'intérêt</h4>
       <p class="meta">Sport — Lecture — Cuisine — Informatique</p>
     </div>
   </aside>
 
-  <!-- RIGHT COLUMN -->
+  <!-- Colonne droite -->
   <main>
-    <div class="card" role="main">
+    <div class="card">
       <header class="main-header">
         <div class="name">
           <h1>Maguette DIOP</h1>
-          <p>Étudiant·e Master 1 — Gestion Stratégique de l'Information (Université Paris 8)</p>
+          <p>Master 1 — Gestion Stratégique de l'Information (Université Paris 8)</p>
         </div>
         <div style="text-align:right">
           <p class="meta">Alternance recherchée à partir d'octobre 2025</p>
-          <a href="CV_2025-09-26_MAGUETTE_DIOP.pdf" download style="display:inline-block;margin-top:8px;padding:8px 12px;border-radius:8px;background:var(--accent);color:white;text-decoration:none;font-weight:700">Télécharger CV (PDF)</a>
+          <a href="CV_2025-09-26_MAGUETTE_DIOP.pdf" download 
+             style="display:inline-block;margin-top:8px;padding:8px 12px;border-radius:8px;background:var(--accent);color:white;text-decoration:none;font-weight:700">
+             Télécharger CV (PDF)
+          </a>
         </div>
       </header>
 
-      <section class="summary" aria-labelledby="summary-title">
-        <h3 id="summary-title" style="margin:0 0 8px 0;color:var(--accent)">Profil</h3>
-        <p style="margin:0">
-          Actuellement en Master Gestion Stratégique de l'Information à l'Université Paris 8, je suis à la recherche d'une alternance
-          à partir d'octobre 2025 dans la gestion documentaire, les bibliothèques et l'innovation numérique. Passionnée par l'optimisation
-          des flux d'information, je souhaite mettre mes compétences au service d'une organisation tout en développant de nouvelles expertises.
+      <section class="summary">
+        <h3 style="color:var(--accent);margin-bottom:8px">Profil</h3>
+        <p>
+          Étudiante en Master Gestion Stratégique de l'Information à l'Université Paris 8, je recherche une alternance
+          à partir d'octobre 2025 dans la gestion documentaire, les bibliothèques et l'innovation numérique.
+          Passionnée par l'optimisation des flux d'information, je souhaite mettre mes compétences au service
+          d'une organisation tout en développant de nouvelles expertises.
         </p>
       </section>
 
-      <section style="margin-top:18px" aria-labelledby="exp-title">
-        <div class="section-title"><h3 id="exp-title">Expériences</h3></div>
+      <section>
+        <div class="section-title"><h3>Expériences</h3></div>
 
         <div class="item">
           <div class="meta">Mai 2025 — Société Géologique de France, Paris</div>
-          <div><strong>Stage</strong> — Inventaire et localisation de périodiques (France, Asie, Afrique). Mise à jour des notices KOHA et SUDOC, catalogage et gestion des collections en salle de lecture.</div>
+          <p><strong>Stage :</strong> Inventaire et localisation de périodiques (France, Asie, Afrique).
+          Mise à jour des notices KOHA et SUDOC, catalogage et gestion des collections en salle de lecture.</p>
         </div>
 
         <div class="item">
           <div class="meta">Mai–Juil 2023 — UCLy (Université Catholique de Lyon)</div>
-          <div><strong>Documentaliste stagiaire</strong> — Alimentation base Ritimo, résumés d’ouvrages, suivi notices Mir@bel et Sign@l, animation atelier Zotero.</div>
+          <p><strong>Documentaliste stagiaire :</strong> Alimentation base Ritimo, résumés d’ouvrages,
+          suivi notices Mir@bel et Sign@l, animation atelier Zotero.</p>
         </div>
 
         <div class="item">
           <div class="meta">Juin–Août 2022 — Médiathèque Alioune Diop (Institut Français du Sénégal)</div>
-          <div><strong>Documentaliste stagiaire</strong> — Collecte, traitement et diffusion de l'information, mise en place d'un système de veille.</div>
+          <p><strong>Documentaliste stagiaire :</strong> Collecte, traitement et diffusion de l'information,
+          mise en place d'un système de veille.</p>
         </div>
 
         <div class="item">
           <div class="meta">Sept–Nov 2021 — Hôpital de Pikine (Dakar)</div>
-          <div><strong>Archiviste stagiaire</strong> — Étude de la valeur des dossiers et traitement des archives (tri, classement, diffusion).</div>
+          <p><strong>Archiviste stagiaire :</strong> Étude de la valeur des dossiers et traitement des archives (tri, classement, diffusion).</p>
         </div>
       </section>
 
-      <section style="margin-top:12px" aria-labelledby="edu-title">
-        <div class="section-title"><h3 id="edu-title">Formation</h3></div>
+      <section>
+        <div class="section-title"><h3>Formation</h3></div>
 
         <div class="item edu">
-          <div class="meta">Depuis septembre 2024</div>
+          <div class="meta">Depuis sept. 2024</div>
           <div class="school">Master 1 — Humanités Numériques / Gestion Stratégique de l'Information — Université Paris 8</div>
         </div>
 
         <div class="item edu">
           <div class="meta">2023 – 2024</div>
-          <div class="school">Licence en Information-Communication (Stratégie de l'information et du document numérique) — Université Jean Moulin Lyon 3</div>
+          <div class="school">Licence Information-Communication (Stratégie de l'information et du document numérique) — Université Lyon 3</div>
         </div>
 
         <div class="item edu">
@@ -230,9 +256,9 @@
         </div>
       </section>
 
-      <section style="margin-top:12px" aria-labelledby="skills-title">
-        <div class="section-title"><h3 id="skills-title">Logiciels & Méthodes</h3></div>
-        <ul class="list">
+      <section>
+        <div class="section-title"><h3>Logiciels & Méthodes</h3></div>
+        <ul>
           <li class="meta">Koha, SUDOC, PMB, Zotero, Pearltrees</li>
           <li class="meta">Microsoft Office (Word, Excel, PowerPoint), création de bases de données</li>
           <li class="meta">Catalogage, indexation, instruments de recherche (ISAD-G/ISAAR-CPF)</li>
@@ -241,7 +267,7 @@
 
       <footer class="note">
         <p>Références : Dalila MATTIA (CFA) — dmattia@cfa-numia.fr — 06 75 93 14 31</p>
-        <p style="margin-top:8px"><em>Pour modifier ce portfolio : éditez le fichier HTML (texte, liens, couleurs).</em></p>
+        <p><em>Pour modifier ce portfolio : éditez le fichier HTML (texte, liens, couleurs).</em></p>
       </footer>
     </div>
   </main>
