--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <!-- Colonne gauche -->
   <aside class="profile" aria-label="Informations personnelles">
     <div class="photo">
-      <img src="designinfo25/PHOTOMA.JPEG" alt="Photo de Maguette Diop">
+      <img src="designinfo25/PHOTOMA.JPEG">
     </div>
 
     <div class="contact card">
