--- a/index.html
+++ b/index.html
@@ -1,278 +1,132 @@
+La pièce jointe Lettre de motivation alternante Maguette Diop.pdf a été ajoutée.Conversation ouverte. 1 message lu.
+
+Aller au contenu
+Utiliser Gmail avec un lecteur d'écran
+1 sur 27 537
+CV HTML CSS (CV HTML CSS)
+Boîte de réception
+
+amadou dieng <diengamah24@gmail.com>
+Pièces jointes
+10:56 (il y a 2 minutes)
+À moi
+
+Traduit : anglais 
+français
+Vérifiez les traductions, car Traduction peut faire des erreurs
+
+ 3 pièces jointes
+  •  Analysé par Gmail
 <!doctype html>
 <html lang="fr">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Maguette Diop — Portfolio</title>
-<meta name="description" content="Maguette Diop — Master Gestion Stratégique de l'Information. Alternance en gestion documentaire, archives et innovation numérique." />
-<style>
-  :root {
-    --bg:#f6f7fb;
-    --card:#ffffff;
-    --muted:#6b7280;
-    --accent:#0f4c81;
-    --accent-2:#0b6ea8;
-    --glass: rgba(15,76,129,0.06);
-    --radius:12px;
-    font-family:"Inter","Segoe UI",Roboto,Helvetica,Arial,sans-serif;
-  }
-  *{box-sizing:border-box;margin:0;padding:0}
-  body {
-    background:linear-gradient(180deg,var(--bg),#ffffff 60%);
-    color:#0b1720;
-    padding:20px;
-    line-height:1.6;
-  }
-
-  .container {
-    max-width:1100px;
-    margin:0 auto;
-    display:grid;
-    grid-template-columns:320px 1fr;
-    gap:24px;
-  }
-
-  .card {
-    background:var(--card);
-    border-radius:var(--radius);
-    padding:22px;
-    box-shadow:0 6px 18px rgba(12,35,62,0.06);
-    transition:transform 0.2s ease, box-shadow 0.2s ease;
-  }
-  .card:hover {
-    transform:translateY(-4px);
-    box-shadow:0 10px 20px rgba(0,0,0,0.08);
-  }
-
-  /* Colonne gauche */
-  .profile {
-    display:flex;
-    flex-direction:column;
-    gap:16px;
-  }
-  .photo img {
-    width:100%;
-    height:auto;
-    border-radius:var(--radius);
-    object-fit:cover;
-  }
-  .contact h2 {
-    font-size:20px;
-    color:var(--accent);
-    margin-bottom:6px;
-  }
-  .contact p {
-    margin:4px 0;
-    color:var(--muted);
-    font-size:14px;
-  }
-  .tag {
-    display:inline-block;
-    background:rgba(11,110,168,0.08);
-    color:var(--accent-2);
-    padding:6px 12px;
-    border-radius:999px;
-    font-weight:600;
-    font-size:13px;
-    margin:6px 6px 0 0;
-  }
-
-  /* Colonne droite */
-  header.main-header {
-    display:flex;
-    justify-content:space-between;
-    flex-wrap:wrap;
-    gap:12px;
-  }
-  .name h1 {
-    font-size:28px;
-    color:var(--accent);
-    margin-bottom:4px;
-  }
-  .name p {
-    color:var(--muted);
-    font-weight:600;
-  }
-  .summary {
-    margin-top:12px;
-    padding:16px;
-    border-radius:10px;
-    background:linear-gradient(90deg, rgba(15,76,129,0.03), rgba(11,110,168,0.02));
-  }
-  .section-title {
-    border-left:4px solid var(--accent);
-    padding-left:8px;
-    margin:20px 0 10px 0;
-  }
-  .section-title h3 {color:var(--accent);margin:0}
-  .item {margin-bottom:16px}
-  .meta {font-size:13px;color:var(--muted)}
-  .edu .school {font-weight:700}
-
-  .skills {
-    display:flex;
-    flex-wrap:wrap;
-    gap:8px;
-    margin-top:8px;
-  }
-  .skill {
-    background:#eef6fb;
-    border-radius:10px;
-    padding:6px 10px;
-    font-weight:600;
-    color:var(--accent-2);
-    font-size:13px;
-  }
-  footer.note {
-    margin-top:20px;
-    color:var(--muted);
-    font-size:13px;
-    text-align:center;
-  }
-
-  /* Responsive */
-  @media (max-width:880px) {
-    .container {grid-template-columns:1fr}
-    header.main-header {flex-direction:column;align-items:flex-start}
-  }
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>CV — Maguette Diop</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<div class="container">
-
-  <!-- Colonne gauche -->
-  <aside class="profile" aria-label="Informations personnelles">
-    <div class="photo">
-      <img src="designinfo25/PHOTOMA.JPEG">
-    </div>
-
-    <div class="contact card">
-      <h2>Information — Documentation</h2>
-      <p><strong>Email :</strong> <a href="mailto:maguetta09@gmail.com">maguetta09@gmail.com</a></p>
-      <p><strong>Tél :</strong> <a href="tel:+33753045524">07 53 04 55 24</a></p>
-      <p><strong>Adresse :</strong> 5 rue Saint-Gobain, 93300 Aubervilliers</p>
-      <p class="meta">Île-de-France, Paris</p>
-      <div>
-        <span class="tag">Master GSI — Paris 8</span>
-        <span class="tag">Recherche d'alternance</span>
+  <main class="cv-container">
+    <header class="header">
+      <div class="photo">
+        <!-- Nom du fichier image demandé : maguette.pdf -->
+        <img src="maguette.jpeg" alt="Photo de Maguette Diop">
       </div>
-    </div>
+      <div class="intro">
+        <h1>Maguette Diop</h1>
+        <p class="subtitle">Information - Documentation</p>
 
-    <div class="card">
-      <h4 style="color:var(--accent);margin-bottom:8px">Compétences</h4>
-      <div class="skills">
-        <span class="skill">Gestion documentaire</span>
-        <span class="skill">Archivistique</span>
-        <span class="skill">Koha / SUDOC</span>
-        <span class="skill">Zotero</span>
-        <span class="skill">PMB</span>
-        <span class="skill">Excel / Word</span>
-      </div>
-    </div>
-
-    <div class="card">
-      <h4 style="color:var(--accent);margin-bottom:8px">Langues & Soft skills</h4>
-      <p class="meta"><strong>Langues :</strong> Français (natif), Wolof, Anglais</p>
-      <p class="meta"><strong>Savoir-être :</strong> Sociable, Curieuse, Travail en équipe, Flexible</p>
-    </div>
-
-    <div class="card">
-      <h4 style="color:var(--accent);margin-bottom:8px">Centres d'intérêt</h4>
-      <p class="meta">Sport — Lecture — Cuisine — Informatique</p>
-    </div>
-  </aside>
-
-  <!-- Colonne droite -->
-  <main>
-    <div class="card">
-      <header class="main-header">
-        <div class="name">
-          <h1>Maguette DIOP</h1>
-          <p>Master 1 — Gestion Stratégique de l'Information (Université Paris 8)</p>
+        <div class="contacts">
+          <a href="mailto:maguetta09@gmail.com">maguetta09@gmail.com</a>
+          <span class="sep">•</span>
+          <a href="tel:0753045524">07 53 04 55 24</a>
+          <div class="address">5 rue Saint-Gobain, Aubervilliers (93300) — Île-de-France, Paris</div>
         </div>
-        <div style="text-align:right">
-          <p class="meta">Alternance recherchée à partir d'octobre 2025</p>
-          <a href="CV_2025-09-26_MAGUETTE_DIOP.pdf" download 
-             style="display:inline-block;margin-top:8px;padding:8px 12px;border-radius:8px;background:var(--accent);color:white;text-decoration:none;font-weight:700">
-             Télécharger CV (PDF)
-          </a>
-        </div>
-      </header>
 
-      <section class="summary">
-        <h3 style="color:var(--accent);margin-bottom:8px">Profil</h3>
-        <p>
-          Étudiante en Master Gestion Stratégique de l'Information à l'Université Paris 8, je recherche une alternance
-          à partir d'octobre 2025 dans la gestion documentaire, les bibliothèques et l'innovation numérique.
-          Passionnée par l'optimisation des flux d'information, je souhaite mettre mes compétences au service
-          d'une organisation tout en développant de nouvelles expertises.
+        <p class="objective">
+          Actuellement en Master Gestion Stratégique de lʼInformation à lʼUniversité Paris 8, je suis à la recherche
+          dʼune alternance à partir dʼoctobre 2025 dans la gestion documentaire, bibliothèques et innovation numérique.
         </p>
-      </section>
+      </div>
+    </header>
 
-      <section>
-        <div class="section-title"><h3>Expériences</h3></div>
+    <section class="columns">
+      <section class="left">
+        <h2>Diplômes & formations</h2>
+        <ul class="list">
+          <li><strong>Depuis septembre 2024</strong> — Master 1 Humanités Numériques / GSI — Université Paris 8, Paris</li>
+          <li><strong>2023–2024</strong> — Licence en information & communication (Stratégie de l'information et du document numérique) — Université Jean Moulin Lyon 3</li>
+          <li><strong>2021–2022</strong> — Licence Professionnelle en Science de l'Information documentaire — EBAD, Dakar (Sénégal)</li>
+        </ul>
 
-        <div class="item">
-          <div class="meta">Mai 2025 — Société Géologique de France, Paris</div>
-          <p><strong>Stage :</strong> Inventaire et localisation de périodiques (France, Asie, Afrique).
-          Mise à jour des notices KOHA et SUDOC, catalogage et gestion des collections en salle de lecture.</p>
-        </div>
+        <h2>Compétences & outils</h2>
+        <ul class="tags">
+          <li>Microsoft Office (Word, Excel, PowerPoint)</li>
+          <li>Création de bases de données</li>
+          <li>PAO / Graphisme</li>
+          <li>PMB, Zotero, Pearltrees</li>
+          <li>KOHA, SUDOC (mise à jour de notices)</li>
+        </ul>
 
-        <div class="item">
-          <div class="meta">Mai–Juil 2023 — UCLy (Université Catholique de Lyon)</div>
-          <p><strong>Documentaliste stagiaire :</strong> Alimentation base Ritimo, résumés d’ouvrages,
-          suivi notices Mir@bel et Sign@l, animation atelier Zotero.</p>
-        </div>
+        <h2>Langues</h2>
+        <ul class="list">
+          <li>Français — courant</li>
+          <li>Wolof — courant</li>
+          <li>Anglais — notions</li>
+        </ul>
 
-        <div class="item">
-          <div class="meta">Juin–Août 2022 — Médiathèque Alioune Diop (Institut Français du Sénégal)</div>
-          <p><strong>Documentaliste stagiaire :</strong> Collecte, traitement et diffusion de l'information,
-          mise en place d'un système de veille.</p>
-        </div>
-
-        <div class="item">
-          <div class="meta">Sept–Nov 2021 — Hôpital de Pikine (Dakar)</div>
-          <p><strong>Archiviste stagiaire :</strong> Étude de la valeur des dossiers et traitement des archives (tri, classement, diffusion).</p>
-        </div>
-      </section>
-
-      <section>
-        <div class="section-title"><h3>Formation</h3></div>
-
-        <div class="item edu">
-          <div class="meta">Depuis sept. 2024</div>
-          <div class="school">Master 1 — Humanités Numériques / Gestion Stratégique de l'Information — Université Paris 8</div>
-        </div>
-
-        <div class="item edu">
-          <div class="meta">2023 – 2024</div>
-          <div class="school">Licence Information-Communication (Stratégie de l'information et du document numérique) — Université Lyon 3</div>
-        </div>
-
-        <div class="item edu">
-          <div class="meta">2021 – 2022</div>
-          <div class="school">Licence Professionnelle Sciences de l'Information Documentaire — EBAD, Dakar (Sénégal)</div>
-        </div>
-      </section>
-
-      <section>
-        <div class="section-title"><h3>Logiciels & Méthodes</h3></div>
-        <ul>
-          <li class="meta">Koha, SUDOC, PMB, Zotero, Pearltrees</li>
-          <li class="meta">Microsoft Office (Word, Excel, PowerPoint), création de bases de données</li>
-          <li class="meta">Catalogage, indexation, instruments de recherche (ISAD-G/ISAAR-CPF)</li>
+        <h2>Centres d'intérêt</h2>
+        <ul class="list">
+          <li>Sport</li>
+          <li>Lecture</li>
+          <li>Cuisine</li>
         </ul>
       </section>
 
-      <footer class="note">
-        <p>Références : Dalila MATTIA (CFA) — dmattia@cfa-numia.fr — 06 75 93 14 31</p>
-        <p><em>Pour modifier ce portfolio : éditez le fichier HTML (texte, liens, couleurs).</em></p>
-      </footer>
-    </div>
+      <section class="right">
+        <h2>Expériences professionnelles</h2>
+
+        <article class="exp">
+          <h3>Société Géologique de France — Stage (depuis mai 2025)</h3>
+          <p>Inventaire et localisation de périodiques (France, Asie, Afrique). Mise à jour de notices KOHA et SUDOC (via COLODUS). Catalogage et gestion des collections en salle de lecture.</p>
+        </article>
+
+        <article class="exp">
+          <h3>Documentaliste stagiaire — UCLy (Université Catholique de Lyon) — mai-juil. 2023</h3>
+          <p>Alimentation et suivi de la base Ritimo : saisie, résumés d'ouvrages, bulletinage des périodiques, dépouillements. Élaboration de bibliographies et mise à jour des dossiers documentaires en ligne. Animation d'atelier Zotero.</p>
+        </article>
+
+        <article class="exp">
+          <h3>Bibliothécaire stagiaire — UCLy — juin-août 2022</h3>
+          <p>Accueil et orientation des usagers. Traitement matériel et intellectuel des documents (estampillage, enregistrement, cotation). Prêt de documents et diffusion sélective de l'information.</p>
+        </article>
+
+        <article class="exp">
+          <h3>Documentaliste stagiaire — Médiathèque Alioune Diop, Institut français du Sénégal (Saint-Louis) — sept.-nov. 2021</h3>
+          <p>Maitrise de la chaîne documentaire : collecte, traitement et diffusion de l'information. Recherche dans bases scientifiques, réalisation de produits documentaires, mise en place d'un système de veille.</p>
+        </article>
+
+        <article class="exp">
+          <h3>Archiviste stagiaire — Service d'archives de l'Hôpital de Pikine, Dakar</h3>
+          <p>Étude de la valeur d'un dossier d'archives ; tri, classement et diffusion.</p>
+        </article>
+
+        <h2>Références</h2>
+        <p>Dalila MATTIA — <a href="mailto:dmattia@cfa-numia.fr">dmattia@cfa-numia.fr</a> — 06 75 93 14 31</p>
+
+        <h2>Atouts</h2>
+        <ul class="list">
+          <li>Sociable, flexible, curieuse, esprit d'équipe</li>
+        </ul>
+      </section>
+    </section>
+
+    <footer class="footer">
+      <small>CV généré à partir des informations fournies. Contact : <a href="mailto:maguetta09@gmail.com">maguetta09@gmail.com</a></small>
+    </footer>
   </main>
-
-</div>
-
 </body>
 </html>
+index.html
+Affichage de index.html en cours...
+MOmymime@gmail.com
