--- a/index.html
+++ b/index.html
@@ -130,3 +130,132 @@ Vérifiez les traductions, car Traduction peut faire des erreurs
 index.html
 Affichage de index.html en cours...
 MOmymime@gmail.com
+La pièce jointe Lettre de motivation alternante Maguette Diop.pdf a été ajoutée.Conversation ouverte. 1 message lu.
+
+Aller au contenu
+Utiliser Gmail avec un lecteur d'écran
+1 sur 27 537
+CV HTML CSS (CV HTML CSS)
+Boîte de réception
+
+amadou dieng <diengamah24@gmail.com>
+Pièces jointes
+10:56 (il y a 4 minutes)
+À moi
+
+Traduit : anglais 
+français
+Vérifiez les traductions, car Traduction peut faire des erreurs
+
+ 3 pièces jointes
+  •  Analysé par Gmail
+:root{
+  --accent:#1f6f6f;
+  --bg:#f7f9fa;
+  --card:#ffffff;
+  --text:#1b1b1b;
+  --muted:#666666;
+  --maxw:1000px;
+}
+
+*{box-sizing:border-box;font-family:Inter, "Segoe UI", Roboto, Arial, sans-serif;}
+
+body{
+  margin:0;
+  background:linear-gradient(180deg, #eaf3f2 0%, var(--bg) 100%);
+  color:var(--text);
+  -webkit-font-smoothing:antialiased;
+  -moz-osx-font-smoothing:grayscale;
+  padding:32px 16px;
+  display:flex;
+  justify-content:center;
+}
+
+.cv-container{
+  width:100%;
+  max-width:var(--maxw);
+  background:var(--card);
+  border-radius:12px;
+  box-shadow:0 8px 30px rgba(20,30,40,0.08);
+  padding:28px;
+}
+
+/* Header */
+.header{
+  display:flex;
+  gap:20px;
+  align-items:center;
+  border-bottom:1px solid #eee;
+  padding-bottom:20px;
+  margin-bottom:20px;
+}
+
+.photo{
+  width:140px;
+  height:140px;
+  border-radius:12px;
+  overflow:hidden;
+  flex-shrink:0;
+  box-shadow:0 6px 18px rgba(10,20,30,0.06);
+}
+
+.photo img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
+  display:block;
+}
+
+.intro h1{
+  margin:0;
+  font-size:26px;
+  letter-spacing:0.2px;
+}
+
+.subtitle{
+  color:var(--muted);
+  margin-top:6px;
+  margin-bottom:12px;
+}
+
+/* Contacts & objective */
+.contacts a{
+  color:var(--accent);
+  text-decoration:none;
+  font-weight:600;
+}
+
+.contacts{font-size:14px;color:var(--muted);margin-bottom:8px;}
+.contacts .address{margin-top:6px;font-size:13px;color:var(--muted);}
+.sep{margin:0 8px;color:var(--muted);}
+
+/* Columns layout */
+.columns{
+  display:grid;
+  grid-template-columns: 320px 1fr;
+  gap:28px;
+}
+
+/* Left column */
+.left h2, .right h2{margin-top:0;color:var(--accent);font-size:16px;}
+.left .list, .right .list{padding-left:18px;}
+.left .tags{list-style:none;padding:0;margin:0;}
+.left .tags li{background:#f1fbfa;margin:6px 0;padding:8px;border-radius:8px;font-size:14px;color:var(--muted);}
+
+/* Experiences */
+.exp{margin-bottom:14px;}
+.exp h3{margin:0 0 6px 0;font-size:15px;}
+.exp p{margin:0;color:var(--muted);line-height:1.5;font-size:14px;}
+
+/* Footer */
+.footer{border-top:1px solid #eee;margin-top:22px;padding-top:12px;text-align:center;color:var(--muted);font-size:13px;}
+
+/* Responsive */
+@media (max-width:880px){
+  .columns{grid-template-columns:1fr; }
+  .header{flex-direction:column;align-items:flex-start;}
+  .photo{width:120px;height:120px;}
+}
+styles.css
+Affichage de index.html en cours...
+MOmymime@gmail.com
